fix: align top navigation bar styles #279 (#280)

--- a/src/main/resources/static/style/app.css
+++ b/src/main/resources/static/style/app.css
@@ -301,3 +301,6 @@
     cursor: text !important;
     width: 60%;
 }
+.navbar .navbar-nav .dropdown-menu li {
+    margin: 0 !important;
+}
